@@ -3,33 +3,34 @@ package org.uerj.utils;
 import org.tinylog.Logger;
 
 import java.io.*;
+import java.lang.reflect.*;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
+import java.util.stream.*;
+
+import static org.uerj.Main.BLOCKS_DIRECTORY;
 
 public class FileUtils {
-    public static final String TEMP_DIRECTORY = "./temp_files/";
-
-    public static final String OUT_DIRECTORY = "./out_dir/";
 
     public static final int BLOCK_SIZE = 256 * 1024; // 256 bytes * 1024 = 256 KB
 
-    public static void splitFile(File file, int maxBlockSize)  {
+    public static void splitFile(File file, String outputDirectory) {
         int indexCount = 0;
         try (InputStream in = Files.newInputStream(file.toPath())) {
-            final byte[] buffer = new byte[maxBlockSize];
+            final byte[] buffer = new byte[BLOCK_SIZE];
             int dataRead = in.read(buffer);
             while (dataRead > -1) {
-                generateFileBlock(buffer, dataRead, indexCount);
+                generateFileBlock(buffer, dataRead, indexCount, outputDirectory);
                 dataRead = in.read(buffer);
                 indexCount++;
             }
         } catch (IOException ex) {
-            Logger.error("Erro ao processar arquivo.", ex);
+            Logger.error("Erro ao processar arquivo. {}", ex.getMessage());
+            ex.printStackTrace();
         }
     }
 
@@ -47,41 +48,41 @@ public class FileUtils {
         return hexString.toString();
     }
 
-    private static void generateFileBlock(byte[] buffer, int length, int index) throws IOException {
-        File outFile = File.createTempFile("temp-", "-split", new File(TEMP_DIRECTORY));
-        try(FileOutputStream fos = new FileOutputStream(outFile)) {
-            fos.write(buffer, 0, length);
-            byte[] byteBlock = Files.readAllBytes(Paths.get(outFile.getAbsolutePath()));
-            String fileBlockDigest = generateMessageDigest(byteBlock);
-
-            File fileRename = new File(TEMP_DIRECTORY + index + ":" + fileBlockDigest);
-            boolean successRename = outFile.renameTo(fileRename);
-            if(!successRename) {
-                throw new RuntimeException("Aconteceu um erro ao renomear o arquivo.");
+    private static void generateFileBlock(byte[] buffer, int length, int index, String outputDirectory) throws IOException {
+        //
+        try {
+            String fileBlockDigest = generateMessageDigest(buffer);
+            Path path = Paths.get(outputDirectory + index + "-" + fileBlockDigest);
+            if (!Files.exists(path)) {
+                File outFile = Files.createFile(path).toFile();
+                FileOutputStream fileOutputStream = new FileOutputStream(outFile);
+                fileOutputStream.write(buffer, 0, length);
             }
+
         } catch (NoSuchAlgorithmException ex) {
             Logger.error("O algoritmo selecionado de encriptação não existe.", ex);
         }
 
     }
 
-    public static void joinFilesFromDirectory(String dir, String fileName) {
-        joinFile(getAllBlocksFromDirectory(dir), OUT_DIRECTORY + fileName);
+    public static void joinFilesFromDirectory(String fileName, String inputDirectory, String outputDirectory) {
+        joinFile(getAllBlocksFromDirectory(inputDirectory), outputDirectory + fileName);
     }
+
 
     private static List<byte[]> getAllBlocksFromDirectory(String dir) {
         return Arrays
                 .stream(Objects.requireNonNull((new File(dir)).listFiles()))
-                .sorted(File::compareTo)
+                .sorted(Comparator.comparingInt(it -> Integer.parseInt(it.getName().split("-")[0])) )
                 .map(block -> {
                     try {
-                       return Files.readAllBytes(Paths.get(block.getAbsolutePath()));
+                        return Files.readAllBytes(Paths.get(block.getAbsolutePath()));
                     } catch (IOException ex) {
-                       Logger.error("Não foi possivel ler os blocks do arquivo.", ex);
+                        Logger.error("Não foi possivel ler os blocks do arquivo.", ex);
                     }
                     return null;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private static void joinFile(List<byte[]> blocks, String outputFilePath) {
